# ODM2JASPEHR

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/odm2jaspehr/: __init__.py  cli.py  models.py  odm_parser.py  questionnaire_builder.py
tests/: test_conversion.py
